# Project-ppchem-tools-kit

./: .gitignore  2.ipynb  COPY Project_ppchem.py  LICENSE  NP_Score  Project_ppchem.py  Projet.ipynb  README.md  SA_NP_sdf  env.yml  main_project.ipynb  o  project_report.ipynb  pyproject.toml  requirements.txt  v2
Project/: convert_to_SMILEs  test  test_sdf
Seb/: env.yml  test_2.ipynb
data/: VI_curve_TP6 copie.xlsx  dataset1.csv  lin_reg_1.xlsx  lin_reg_3.xlsx  lin_reg_4.xlsx  line_reg_2.xlsx  test_graph_2.xlsx  test_graph_3.xlsx  test_graph_4.xlsx  test_graph_5.xlsx
notebooks/: README.md  new_nb.ipynb  project_report.ipynb  test.ipynb
sdf/: 1a37_ligand.sdf  1a7x_ligand.sdf  1abf_ligand.sdf  1agw_ligand.sdf  1ai6_ligand.sdf  1aj6_ligand.sdf  1ajx_ligand.sdf  1akq_ligand.sdf  1al7_ligand.sdf  1al8_ligand.sdf  1amk_ligand.sdf  1amw_ligand.sdf  1apw_ligand.sdf  1au0_ligand.sdf  1avd_ligand.sdf  1avn_ligand.sdf  1avp_ligand.sdf  1awi_ligand.sdf  1ax1_ligand.sdf  1axz_ligand.sdf  1ayu_ligand.sdf  1aze_ligand.sdf  1azg_ligand.sdf  1azx_ligand.sdf  1b05_ligand.sdf  1b0f_ligand.sdf  1b0h_ligand.sdf  1b32_ligand.sdf  1b42_ligand.sdf  1b4d_ligand.sdf  1b52_ligand.sdf  1b55_ligand.sdf  1b5h_ligand.sdf  1b5i_ligand.sdf  1b6j_ligand.sdf  1b6k_ligand.sdf  1b6p_ligand.sdf  1b7h_ligand.sdf  1b9s_ligand.sdf  1b9t_ligand.sdf  (+8968 more)
tests/: test_Project_ppchem.py  test_add_data_point.py  test_bind_enter.py  test_browse_excel_file.py  test_clear_input.py  test_copy_text.py  test_create_radio_button.py  test_display_graph.py  test_display_max_point_and_coords.py  test_display_molecule.py  (+24 more)
(+10123 files in other folders)
