[project]
name = "Project-ppchem-tools-kit"
version = "0.1.0"
authors = [
    { name = "Sébastien Grunberg", email = "sebastien.grunberg@epfl.ch" },
    { name = "Méloé Enzinger", email = "meloe.enzinger@epfl.ch"}
]
dependencies = [
    "cairocffi==1.7.0",
    "CairoSVG==2.7.1",
    "scikit-learn==1.3.0",
    "numpy==1.24.3",
    "Pillow==10.2.0",
    "PubChemPy==1.0.4",
    "rdkit==2023.9.6",
    "requests==2.31.0",
    "matplotlib==3.7.2",
    "pandas==2.0.3",
    "svglib==1.5.1",
    "reportlab==4.2.0"
]




